# ColPack

./: .gitignore  CMakeLists.txt  ColPackConfig.cmake.in  README.md
Examples/ColPackAll/: Main.cpp
Examples/GeneralColoring/: Main.cpp
Examples/SomeExample/: Main.cpp
Examples/Use_Library/: template.cpp
inc/: CMakeLists.txt
inc/ColPack/: CMakeLists.txt  ColPackHeaders.h
inc/ColPack/Utilities/: CMakeLists.txt  MatrixDeallocation.h  Timer.h  extra.h  stat.h
src/: CMakeLists.txt
src/BipartiteGraphBicoloring/: BipartiteGraphBicoloring.cpp  BipartiteGraphBicoloringInterface.cpp  BipartiteGraphCore.cpp  BipartiteGraphInputOutput.cpp  BipartiteGraphOrdering.cpp  BipartiteGraphVertexCover.cpp  CMakeLists.txt
src/BipartiteGraphPartialColoring/: BipartiteGraphPartialColoring.cpp  BipartiteGraphPartialColoringInterface.cpp  BipartiteGraphPartialOrdering.cpp  CMakeLists.txt
src/GeneralGraphColoring/: CMakeLists.txt  GraphColoring.cpp  GraphColoringInterface.cpp  GraphCore.cpp  GraphInputOutput.cpp  GraphOrdering.cpp
src/Recovery/: CMakeLists.txt  CMakelists.txt  HessianRecovery.cpp  JacobianRecovery1D.cpp  JacobianRecovery2D.cpp  RecoveryCore.cpp
src/SMPGC/: CMakeLists.txt  SMPGC.cpp  SMPGCColoring.cpp  SMPGCColoringD1.cpp  SMPGCColoringD1BIT.cpp  SMPGCColoringD1Orig.cpp  SMPGCColoringD2.cpp  SMPGCColoringHybrid.cpp  SMPGCGraph.cpp  SMPGCOrdering.cpp
src/Utilities/: CMakeLists.txt  CoutLock.cpp  DisjointSets.cpp  File.cpp  MatrixDeallocation.cpp  Pause.cpp  StringTokenizer.cpp  Timer.cpp  command_line_parameter_processor.cpp  current_time.cpp  extra.cpp  (+2 more)
(+40 files in other folders)
