
install(FILES
        command_line_parameter_processor.h
        CoutLock.h
        current_time.h
        DisjointSets.h
        extra.h
        File.h
        MatrixDeallocation.h
        mmio.h
        Pause.h
        stat.h
        StringTokenizer.h
        Timer.h
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ColPack)